c4prj2_input/grade.txt
Grading at Fri Apr 19 19:41:10 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:76:1: error: expected identifier or ‘(’ before ‘/’ token
 /}
 ^
Compilation of input.c failed

Overall Grade: F
